--- a/css_stuff/shop.css
+++ b/css_stuff/shop.css
@@ -49,7 +49,7 @@ header h1 {
   padding: 2rem;
 }
 
-@media (max-width: 400px) {
+@media (max-width: 420px) {
   header h1 {
     width: 100%;
     margin: 0;
@@ -57,6 +57,7 @@ header h1 {
   .logo {
     position: static;
     margin: auto;
+    display: block;
   }
 }
 
